day 6 task sol validation

--- a/day3/day2/Views/Course/Index.cshtml
+++ b/day3/day2/Views/Course/Index.cshtml
@@ -7,7 +7,7 @@
 @model List<Course>
 
 
-<a  asp-action="new" asp-controller="Course" class="btn btn-danger">create new</a>
+<a  asp-action="new" asp-controller="Course" class="btn btn-success">create new</a>
 <table class="table table-borderd table-hover">
         <tr>
             <th>Name</th>
