--- a/day3/day2/Views/Course/Detail.cshtml
+++ b/day3/day2/Views/Course/Detail.cshtml
@@ -1,9 +1,17 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-}
+
 @model Course
+
+@{
+    var routeData = new Dictionary<string, string>
+    {
+        {"id", Model.Id.ToString()}
+
+    };}
+
+
 
 
 <table class="table table-borderd table-hover">
@@ -20,8 +28,12 @@
             <td>@Model.Name</td>
             <td>@Model.MinDegree</td>
             <td>@Model.Degree</td>
+
             
         </tr>
+
+   
     
 
 </table>
+<a asp-action="Delete" class="btn btn-danger" asp-all-route-data="routeData">Delete</a>
